<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEST</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_daddress_setting">默认地址设置</string>
    <string name="content_in_label_DAddress">送货地址：</string>
    <string name="content_in_label_street"> 街道 </string>
    <string name="content_in_label_building"> 楼号 </string>
    <string name="content_in_label_room"> 房间号 </string>
    <string name="content_in_button_submit_DAdress">确认地址</string>
</resources>
