<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.setting.address.DAddressSettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/daddress_setting_container"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/content_in_label_DAddress"
            android:id="@+id/label_DAddress"
            android:textSize="32sp"
            android:textStyle="normal|bold" />

        <GridLayout
            android:columnCount="5"
            android:rowCount="2"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="267dp"
                android:layout_height="50dp"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/edit_street"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="4"/>

            <TextView
                android:layout_width="71dp"
                android:layout_height="34dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/content_in_label_street"
                android:id="@+id/label_street"
                android:layout_row="0"
                android:layout_column="4"
                android:textSize="24sp"
                android:textStyle="italic"
                android:layout_gravity="bottom"
                android:layout_marginLeft="7sp" />

            <EditText
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_building"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/content_in_label_building"
                android:id="@+id/label_building"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="bottom"
                android:textSize="24sp"
                android:textStyle="italic"
                android:layout_marginLeft="7sp" />

            <EditText
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_room"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_marginLeft="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/content_in_label_room"
                android:id="@+id/label_room"
                android:layout_row="1"
                android:layout_column="4"
                android:layout_marginLeft="7sp"
                android:textSize="24sp"
                android:textStyle="italic"
                android:layout_gravity="bottom"/>

        </GridLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit_DAddress"
            android:text="@string/content_in_button_submit_DAdress" />
    </LinearLayout>
</RelativeLayout>
